[tool.poetry]
name = "kcp-test"
version = "0.1.0"
description = "Kernel change point detection"
authors = ["Daria Kuznetsova"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.1"
scipy = "^1.14.0"
joblib = "^1.4.2"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
